[project] # https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "tqueue"
readme = "README.md"
license = "Unlicense"
dynamic = ["version", "description"]
requires-python = ">=3.8"
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[tool.mypy] # https://mypy.readthedocs.io/en/stable/config_file.html
files = "."
exclude = ['^build/', '^\.']
explicit_package_bases = true
python_version = "3.8"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[tool.ruff]
line-length = 120

[tool.ruff.lint] # https://docs.astral.sh/ruff/rules/
select = ["ALL"]
ignore = [
    "COM",  # flake8-commas
    "E501", # line-too-long
    "S101", # assert
]

[tool.ruff.lint.pydocstyle]
convention = "google" # Use Google-style docstrings
