[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project] # https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "turnq"
readme = "README.md"
license = "Unlicense"
dynamic = ["version", "description"]
requires-python = ">=3.11"
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls] # https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls
Homepage = "https://github.com/HexDecimal/turnq"
Repository = "https://github.com/HexDecimal/turnq"
Issues = "https://github.com/HexDecimal/turnq/issues"
Changelog = "https://github.com/HexDecimal/turnq/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
write_to = "turnq/_version.py"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html
exclude_lines = ['^\s*\.\.\.', "if TYPE_CHECKING:", "# pragma: no cover"]
omit = ["_version.py"]

[tool.mypy] # https://mypy.readthedocs.io/en/stable/config_file.html
files = "."
exclude = ['^build/', '^\.']
explicit_package_bases = true
python_version = "3.11"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = ["pytest-cov"]
testpaths = ["."]
addopts = "--doctest-modules --doctest-glob='*.md' --cov=turnq --cov-report=term-missing"

[tool.ruff]
line-length = 120

[tool.ruff.lint] # https://docs.astral.sh/ruff/rules/
select = ["ALL"]
ignore = [
    "COM",  # flake8-commas
    "E501", # line-too-long
    "S101", # assert
]

[tool.ruff.lint.pydocstyle]
convention = "google" # Use Google-style docstrings
